--- a/layout/fragment_about_app.xml
+++ b/layout/fragment_about_app.xml
@@ -1,70 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".presentation.ui.fragment.profile.AboutApp">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/tabBarLayout"
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabs"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="70dp"
-        android:background="@color/white">
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="70dp"
-            android:background="@color/white"
-            app:tabBackground="@color/white"
-            app:tabGravity="fill"
-            app:tabInlineLabel="true"
-            app:tabMode="scrollable"
-            app:tabSelectedTextColor="@android:color/black"
-            app:tabTextAppearance="@style/CustomTabLayout" />
-
-
-    </com.google.android.material.appbar.AppBarLayout>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="23dp"
+        android:background="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/viewPager"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="1.0"
+        app:tabBackground="@color/white"
+        app:tabGravity="fill"
+        app:tabInlineLabel="true"
+        app:tabMode="scrollable"
+        app:tabSelectedTextColor="@android:color/black"
+        app:tabTextAppearance="@style/CustomTabLayout" />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tabBarLayout"
-        android:layout_marginTop="70dp" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="136dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="88dp"
         android:layout_height="27dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_gravity="center_horizontal"
-        android:layout_marginStart="162dp"
-        android:layout_marginTop="29dp"
-        android:layout_marginEnd="161dp"
-        android:layout_marginBottom="739dp"
+        android:layout_marginTop="40dp"
         android:fontFamily="@font/roboto"
         android:text="Профиль"
         android:textColor="@color/purple"
         android:textSize="18sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_about_app"
         android:layout_width="336dp"
         android:layout_height="293dp"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="160dp"
-        android:layout_marginEnd="11dp"
-        android:layout_marginBottom="436dp"
         android:fontFamily="@font/roboto"
         android:text="@string/about_app"
-        android:textStyle="bold"
+        android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="14sp" />
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/viewPager"
+        app:layout_constraintVertical_bias="0.043" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
