--- a/layout/fragment_contacts.xml
+++ b/layout/fragment_contacts.xml
@@ -1,150 +1,191 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.ui.fragment.profile.Contacts">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/tabBarLayout"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabs"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/white"
-        android:layout_marginTop="70dp"
-        android:layout_height="50dp">
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="70dp"
-            android:background="@color/white"
-            app:tabBackground="@color/white"
-            app:tabGravity="fill"
-            app:tabInlineLabel="true"
-            app:tabMode="scrollable"
-            app:tabSelectedTextColor="@android:color/black"
-            app:tabTextAppearance="@style/CustomTabLayout" />
-
-
-    </com.google.android.material.appbar.AppBarLayout>
+        app:layout_constraintBottom_toTopOf="@+id/viewPager"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:tabBackground="@color/white"
+        app:tabGravity="fill"
+        app:tabInlineLabel="true"
+        app:tabMode="scrollable"
+        app:tabSelectedTextColor="@android:color/black"
+        app:tabTextAppearance="@style/CustomTabLayout" />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
-        android:layout_width="match_parent"
-        android:layout_marginTop="70dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tabBarLayout" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="136dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <TextView
+        android:id="@+id/textView2"
+        android:layout_width="97dp"
+        android:layout_height="51dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="center_horizontal"
+        android:fontFamily="@font/roboto"
+        android:paddingTop="16dp"
+        android:textAlignment="center"
+        android:text="Профиль"
+        android:textColor="@color/purple"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.023" />
+
+    <TextView
+        android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="155dp"
-        android:layout_marginEnd="232dp"
-        android:layout_marginBottom="626dp"
+        android:layout_marginTop="48dp"
         android:fontFamily="@font/roboto"
         android:text="Горячая линия:"
-        android:textStyle="bold"
         android:textColor="@color/black"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.102"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tabs"
+        app:layout_constraintVertical_bias="0.0" />
+
 
     <TextView
+        android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
-        android:layout_marginStart="94dp"
-        android:layout_marginTop="188dp"
-        android:layout_marginEnd="120dp"
-        android:layout_marginBottom="593dp"
         android:fontFamily="@font/roboto"
         android:text="+ 996 (312) 40 12 40"
         android:textColor="#038C08"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView9"
+        app:layout_constraintVertical_bias="0.024" />
 
     <TextView
+        android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="241dp"
-        android:layout_marginEnd="203dp"
-        android:layout_marginBottom="540dp"
         android:fontFamily="@font/roboto"
         android:text="Заказ по телефону:"
-        android:textStyle="bold"
         android:textColor="@color/black"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.116"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView12"
+        app:layout_constraintVertical_bias="0.08" />
 
     <TextView
+        android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
-        android:layout_marginStart="94dp"
-        android:layout_marginTop="275dp"
-        android:layout_marginEnd="165dp"
-        android:layout_marginBottom="506dp"
         android:fontFamily="@font/roboto"
         android:text="0707 40 12 40"
         android:textColor="#038C08"
-        android:textSize="18sp" />
-
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.412"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
+        app:layout_constraintVertical_bias="0.06" />
 
     <TextView
+        android:id="@+id/textView17"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
-        android:layout_marginStart="94dp"
-        android:layout_marginTop="300dp"
-        android:layout_marginEnd="165dp"
-        android:layout_marginBottom="481dp"
         android:fontFamily="@font/roboto"
-        android:text="0707 40 12 40"
+        android:text="0555 40 12 40"
         android:textColor="#038C08"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.412"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView10"
+        app:layout_constraintVertical_bias="0.032" />
 
     <TextView
+        android:id="@+id/textView21"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="353dp"
-        android:layout_marginEnd="167dp"
-        android:layout_marginBottom="428dp"
         android:fontFamily="@font/roboto"
         android:text="Наши социальные сети:"
         android:textColor="@color/black"
+        android:textSize="18sp"
         android:textStyle="bold"
-        android:textSize="18sp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.139"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView17"
+        app:layout_constraintVertical_bias="0.13" />
 
     <ImageView
         android:id="@+id/img_whatsapp"
-        android:backgroundTint="@color/white"
         android:layout_width="35dp"
         android:layout_height="35dp"
+        android:backgroundTint="@color/white"
         android:src="@drawable/icon_whatsapp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.268"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView21"
+        app:layout_constraintVertical_bias="0.215" />
 
-        android:layout_marginTop="393.5dp"
-        android:layout_marginStart="120.5dp"
-        android:layout_marginEnd="237.5dp"
-        android:layout_marginBottom="381.5dp"
-        />
     <ImageView
         android:id="@+id/img_instagram"
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:src="@drawable/icon_instagram"
-        android:layout_marginTop="393.5dp"
-        android:layout_marginStart="190.5dp"
-        android:layout_marginEnd="177.5dp"
-        android:layout_marginBottom="381.5dp"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+
+        app:layout_constraintTop_toBottomOf="@+id/textView21"
+        app:layout_constraintVertical_bias="0.215" />
+
     <ImageView
         android:id="@+id/img_facebook"
-        android:backgroundTint="@color/white"
         android:layout_width="35dp"
         android:layout_height="35dp"
+        android:backgroundTint="@color/white"
         android:src="@drawable/icon_facebook"
-        android:layout_marginTop="393.5dp"
-        android:layout_marginStart="260.5dp"
-        android:layout_marginEnd="117.5dp"
-        android:layout_marginBottom="381.5dp"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.739"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView21"
+        app:layout_constraintVertical_bias="0.215" />
 
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
