--- a/layout/fragment_help.xml
+++ b/layout/fragment_help.xml
@@ -1,176 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.ui.fragment.profile.Help">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/tabBarLayout"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabs"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="70dp"
-        android:background="@color/white">
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:background="@color/white"
-            app:tabBackground="@color/white"
-            app:tabGravity="fill"
-            app:tabInlineLabel="true"
-            app:tabMode="scrollable"
-            app:tabSelectedTextColor="@android:color/black"
-            app:tabTextAppearance="@style/CustomTabLayout" />
-
-
-    </com.google.android.material.appbar.AppBarLayout>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="23dp"
+        android:background="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/viewPager"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:tabBackground="@color/white"
+        app:tabGravity="fill"
+        app:tabInlineLabel="true"
+        app:tabMode="scrollable"
+        app:tabSelectedTextColor="@android:color/black"
+        app:tabTextAppearance="@style/CustomTabLayout" />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tabBarLayout"
-        android:layout_marginTop="70dp" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="136dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <TextView
-        android:layout_width="88dp"
-        android:layout_height="27dp"
+        android:id="@+id/textView2"
+        android:layout_width="97dp"
+        android:layout_height="51dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_gravity="center_horizontal"
-        android:layout_marginStart="162dp"
-        android:layout_marginTop="29dp"
-        android:layout_marginEnd="161dp"
-        android:layout_marginBottom="739dp"
         android:fontFamily="@font/roboto"
+        android:paddingTop="16dp"
         android:text="Профиль"
+        android:textAlignment="center"
         android:textColor="@color/purple"
         android:textSize="18sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.023" />
 
     <TextView
+        android:id="@+id/textView22"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Часто задаваемые вопросы"
-        android:textStyle="bold"
-        android:textSize="18dp"
         android:textColor="#392250"
-        android:layout_marginTop="140dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="136dp"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/viewPager"
+        app:layout_constraintVertical_bias="0.042" />
 
-        />
     <com.google.android.material.button.MaterialButton
         android:id="@+id/help_question1"
-        android:layout_width="340dp"
+        android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="180dp"
-        android:layout_marginEnd="216dp"
-        android:layout_marginBottom="608dp"
         android:backgroundTint="@color/white"
         android:text="Как сделать заказ?"
         android:textAlignment="textStart"
         android:textAllCaps="false"
         android:textColor="#392250"
-        android:textSize="14sp">
+        android:textSize="14sp"
+        android:drawableRight="@drawable/icon_small_arrow"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.225"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView22"
+        app:layout_constraintVertical_bias="0.061">
 
 
     </com.google.android.material.button.MaterialButton>
 
-    <ImageView
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:src="@drawable/icon_small_arrow"
-        android:layout_marginTop="188dp"
-        android:layout_marginStart="360dp"
-        android:layout_marginEnd="22dp"
-        android:layout_marginBottom="604dp"
-        />
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/help_question2"
-        android:layout_width="340dp"
+        android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="240dp"
-        android:layout_marginEnd="128dp"
-        android:layout_marginBottom="552dp"
         android:backgroundTint="@color/white"
+        android:drawableRight="@drawable/icon_small_arrow"
         android:text="Как сделать заказ по телефону ?"
         android:textAlignment="textStart"
         android:textAllCaps="false"
         android:textColor="#392250"
-        android:textSize="14sp">
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.225"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/help_question1"
+        app:layout_constraintVertical_bias="0.027">
 
 
     </com.google.android.material.button.MaterialButton>
 
-    <ImageView
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="360dp"
-        android:layout_marginTop="248dp"
-        android:layout_marginEnd="22dp"
-        android:layout_marginBottom="604dp"
-        android:src="@drawable/icon_small_arrow" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/help_question3"
-        android:layout_width="340dp"
+        android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="300dp"
-        android:layout_marginEnd="103dp"
-        android:layout_marginBottom="496dp"
+        android:backgroundTint="@color/white"
+        android:drawableRight="@drawable/icon_small_arrow"
         android:text="Как оплатить заказ при получении?"
+        android:textAlignment="textStart"
+        android:textAllCaps="false"
         android:textColor="#392250"
         android:textSize="14sp"
-        android:textAllCaps="false"
-        android:textAlignment="textStart"
-        android:backgroundTint="@color/white"
-        >
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.225"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/help_question2"
+        app:layout_constraintVertical_bias="0.028">
 
     </com.google.android.material.button.MaterialButton>
-
-    <ImageView
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="360dp"
-        android:layout_marginTop="308dp"
-        android:layout_marginEnd="28.63dp"
-        android:layout_marginBottom="495.4dp"
-        android:src="@drawable/icon_small_arrow" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/help_question4"
-        android:layout_width="340dp"
+        android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="360dp"
-        android:layout_marginEnd="196dp"
-        android:layout_marginBottom="440dp"
+        android:backgroundTint="@color/white"
+        android:drawableRight="@drawable/icon_small_arrow"
         android:text="Как оставить чаявые ?"
+        android:textAlignment="textStart"
+        android:textAllCaps="false"
         android:textColor="#392250"
         android:textSize="14sp"
-        android:textAllCaps="false"
-        android:textAlignment="textStart"
-        android:backgroundTint="@color/white"
-        >
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.225"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/help_question3"
+        app:layout_constraintVertical_bias="0.038">
 
     </com.google.android.material.button.MaterialButton>
 
-    <ImageView
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="360dp"
-        android:layout_marginTop="368dp"
-        android:layout_marginEnd="28.63dp"
-        android:layout_marginBottom="439.4dp"
-        android:src="@drawable/icon_small_arrow" />
-
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
