--- a/layout/fragment_history.xml
+++ b/layout/fragment_history.xml
@@ -1,74 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".presentation.ui.fragment.profile.PurchaseHistory">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/tabBarLayout"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabs"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="23dp"
         android:background="@color/white"
-        android:layout_marginTop="65dp"
-        android:layout_height="50dp">
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="57dp"
-            android:background="@color/white"
-            app:tabBackground="@color/white"
-            app:tabGravity="fill"
-            app:tabInlineLabel="true"
-            app:tabMode="scrollable"
-            app:tabSelectedTextColor="@android:color/black"
-            app:tabTextAppearance="@style/CustomTabLayout" />
-
-
-    </com.google.android.material.appbar.AppBarLayout>
+        app:layout_constraintBottom_toTopOf="@+id/viewPager"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:tabBackground="@color/white"
+        app:tabGravity="fill"
+        app:tabInlineLabel="true"
+        app:tabMode="scrollable"
+        app:tabSelectedTextColor="@android:color/black"
+        app:tabTextAppearance="@style/CustomTabLayout" />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
-        android:layout_width="match_parent"
-        android:layout_marginTop="57dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tabBarLayout" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="136dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
     <TextView
-        android:layout_width="88dp"
-        android:layout_height="27dp"
+        android:id="@+id/textView2"
+        android:layout_width="97dp"
+        android:layout_height="51dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_gravity="center_horizontal"
-        android:layout_marginStart="162dp"
-        android:layout_marginTop="29dp"
-        android:layout_marginEnd="161dp"
-        android:layout_marginBottom="739dp"
         android:fontFamily="@font/roboto"
+        android:paddingTop="16dp"
+        android:textAlignment="center"
         android:text="Профиль"
         android:textColor="@color/purple"
         android:textSize="18sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.023" />
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/history_details"
-        android:layout_width="380dp"
-        android:layout_height="136dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="130dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="497dp"
+        android:layout_width="388dp"
+        android:layout_height="140dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.192"
+        app:layout_constraintTop_toBottomOf="@id/viewPager"
+        app:layout_constraintVertical_bias="0.03"
         app:strokeColor="#6D6D6D"
-        app:strokeWidth="1dp"
-        >
+        app:strokeWidth="1dp">
 
         <TextView
             android:id="@+id/textView"
@@ -185,4 +184,4 @@
     </com.google.android.material.card.MaterialCardView>
 
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
