--- a/layout/fragment_purchase_history_blank.xml
+++ b/layout/fragment_purchase_history_blank.xml
@@ -1,79 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.ui.fragment.profile.PurchaseHistoryBlankFragment">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/tabBarLayout"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabs"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="80dp"
-        android:background="@color/white">
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
-            android:background="@color/white"
-            app:tabBackground="@color/white"
-            app:tabGravity="fill"
-            app:tabInlineLabel="true"
-            app:tabMode="scrollable"
-            app:tabSelectedTextColor="@android:color/black"
-            app:tabTextAppearance="@style/CustomTabLayout" />
-
-
-    </com.google.android.material.appbar.AppBarLayout>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="23dp"
+        android:background="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/viewPager"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:tabBackground="@color/white"
+        app:tabGravity="fill"
+        app:tabInlineLabel="true"
+        app:tabMode="scrollable"
+        app:tabSelectedTextColor="@android:color/black"
+        app:tabTextAppearance="@style/CustomTabLayout" />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tabBarLayout"
-        android:layout_marginTop="80dp" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="136dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <TextView
-        android:layout_width="88dp"
-        android:layout_height="27dp"
+        android:id="@+id/textView2"
+        android:layout_width="97dp"
+        android:layout_height="51dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_gravity="center_horizontal"
-        android:layout_marginStart="162dp"
-        android:layout_marginTop="29dp"
-        android:layout_marginEnd="161dp"
-        android:layout_marginBottom="739dp"
         android:fontFamily="@font/roboto"
+        android:paddingTop="16dp"
+        android:textAlignment="center"
         android:text="Профиль"
         android:textColor="@color/purple"
         android:textSize="18sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.023" />
 
 
     <TextView
+        android:id="@+id/textView23"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Ваша история покупок пуста:("
         android:textColor="#000000"
         android:textSize="12sp"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/viewPager"
+        app:layout_constraintVertical_bias="0.329" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/orderBtn"
-        android:layout_width="157dp"
+        android:layout_width="155dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
         android:layout_gravity="center"
+        android:backgroundTint="#FFCC3D"
         android:text="Сделать заказ"
         android:textAllCaps="false"
         android:textColor="@color/black"
         app:cornerRadius="8dp"
-        android:backgroundTint="#FFCC3D"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView23"
+        app:layout_constraintVertical_bias="0.035" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
